--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "dev": "ng serve -o | npm run mock:server | ng test",
+    "dev": "ng serve -o | npm run mock:server",
     "build": "ng build",
     "test": "ng test",
     "e2e": "ng e2e",
